# CompGeomAniket

./: .gitignore  Angle.cpp  Angle.h  CMakeLists.txt  Core.h  Distance.cpp  Distance.h  GeoUtils.h  Intersection.cpp  Intersection.h  Line.cpp  Line.h  Notes.md  Plane.h  Point.h  README.md  Vector.cpp  Vector.h  cmaking.sh  dummy  dummy.cpp
include/: Angle.cpp  Angle.h  Core.h  Distance.cpp  Distance.h  Edge.h  EdgeDCEL.h  FaceDCEL.h  GeoUtils  GeoUtils.cpp  GeoUtils.h  Intersection.cpp  Intersection.h  Line.cpp  Line.h  MonotonePartition  MonotonePartition.cpp  Plane.h  Point.h  Polygon.cpp  Polygon.h  PolygonDCEL.h  Triangulation.cpp  Triangulation.h  Vector.cpp  Vector.h  Vertex.h  VertexDCEL.h
src/: Angle.cpp  Distance.cpp  GeoUtils.cpp  Intersection.cpp  Triangulation.cpp  dummy.cpp
tests/: CMakeLists.txt  cga_tests.cpp  ctesting.sh
